--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="product-grid">
             <div class="product-card">
-                <img src="img/terrabikini.png" alt="Terra Bikini"
+                <img src="/img/terrabikini.png" alt="Terra Bikini"
                 data-original-src="img/terrabikini.png" 
                 data-hover-src="img/terrabikini2.png">
                 <div class="card-info">
@@ -45,7 +45,7 @@
             </div>
 
             <div class="product-card">
-                <img src="img/Noir Bikini.webp" alt="Traje de Baño Clásico"
+                <img src="/img/Noir Bikini.webp" alt="Traje de Baño Clásico"
                 data-original-src="img/Noir Bikini.webp" 
                 data-hover-src="img/noirbikini.png">
                 <div class="card-info">
@@ -56,7 +56,7 @@
             </div>
 
             <div class="product-card">
-                <img src="img/Wild Pink Bikini.webp" alt="Traje de Baño Clásico"
+                <img src="/img/Wild Pink Bikini.webp" alt="Traje de Baño Clásico"
                 data-original-src="img/Wild Pink Bikini.webp" 
                 data-hover-src="img/Wild Pink Bikini2.webp">
                 <div class="card-info">
@@ -67,7 +67,7 @@
             </div>
 
             <div class="product-card">
-                <img src="img/Wild Nude Bikini.png" alt="Traje de Baño Clásico"
+                <img src="/img/Wild Nude Bikini.png" alt="Traje de Baño Clásico"
                 data-original-src="img/Wild Nude Bikini.png" 
                 data-hover-src="img/wild nude bikini2.webp">
                 <div class="card-info">
